# List of BLOM options
option('idlage', type: 'boolean', value: true)
option('levitus2x', type: 'boolean', value: true)
option('tke', type: 'boolean', value: true)
option('tkeadv', type: 'boolean', value: true)
option('trc', type: 'boolean', value: true)
# Build configuration
option('openmp', type: 'feature', value: 'auto',
  description: 'Enable OpenMP')
option('mpi', type: 'boolean', value: false,
  description: 'Enable MPI work sharing')
option('parallel_netcdf', type: 'boolean', value: false,
  description: 'Enable parallel version of NetCDF')
