phy_sources = ['advect.F', 'barotp.F', 'bigrid.F', 'blkdat.F', 'blom_init.F',
'blom_step.F', 'chksum.F', 'chksummsk.F', 'chkvar.F', 'clndr.F', 'cmnfld.F',
'cmnfld_bfsqf.F', 'cmnfld_nslope.F', 'convec.F', 'crc.c', 'diapfl.F',
'difest.F', 'diffus.F', 'dimensions.F', 'eddtra.F', 'eddtra_gm.F',
'eddtra_intdif.F', 'eosdat.F', 'eosfun.F', 'fill_global.F', 'forfun_channel.F',
'frcdat.F', 'fwbbal.F', 'geoenv_channel.F', 'geoenv_file.F', 'geoenv_test.F',
'getfrc.F', 'getlpi.F', 'gettime.F', 'hfharm.F', 'icaux_channel.F',
'ictsz_channel.F', 'ictsz_file.F', 'idarlx.F', 'inicon.F', 'inifrc.F',
'inigeo.F', 'iniphy.F', 'initime.F', 'initke.F', 'inivar.F', 'intp1d.F',
'isinf.F', 'isnan.F', 'mod_channel.F', 'mod_dia.F', 'mod_nctools.F',
'mod_swabs.F', 'mod_xc.F', 'momtum.F', 'mxlayr.F', 'pbtcor.F', 'penint.F',
'pgforc.F', 'rdcsss.F', 'rdlim.F', 'read_twedon.F', 'remap_eitflx.F',
'remap_eitvel.F', 'restart_rd.F', 'restart_wt.F', 'settemmin.F', 'sfcstr.F',
'sfcstr_channel.F', 'stdbud.F', 'thermf.F', 'thermf_channel.F', 'tmsmt1.F',
'tmsmt2.F', 'triint.F', 'types.F90', 'wdiflx.F', 'wtime.F']

foreach src: phy_sources
  sources += 'phy/' + src
endforeach
